edited the training css to update media quereis, remeoved unesseary bootstrap link in header, was prevent from toggle working correctly. made the width of the accordion boxes wider when on mobile

--- a/styles.css
+++ b/styles.css
@@ -283,20 +283,7 @@ p {
 
 /* Resume */
 
-.accordion {
-  margin-left: 20%;
-  margin-right: 20%;
-  border: 20px double #eceada; 
-  border-radius: 50px;
-  padding: 2%;
-}
 
-.accordion-container {
-  background-image: url("./plant.jpeg");
-  padding: 5%;
-  border-radius: 50px;
-  
-}
 /* cure color rgb(176, 188, 148); */
 
 /* #233325; */
