--- a/training.css
+++ b/training.css
@@ -58,7 +58,7 @@ body {
   hr {
       color: #ffffff;
       border-style: none;
-      border
+      
   }
 
   img {
@@ -85,7 +85,20 @@ body {
     background-color: #233325;
     color: #ffffff;
   }
-
+  .accordion {
+    margin-left: 20%;
+    margin-right: 20%;
+    border: 20px double #eceada; 
+    border-radius: 50px;
+    padding: 2%;
+  }
+  
+  .accordion-container {
+    background-image: url("./plant.jpeg");
+    padding: 5%;
+    border-radius: 50px;
+    
+  }
   .d-grid {
     margin-top: 5%;
     margin-bottom: 5%;
@@ -111,6 +124,33 @@ body {
 }
 
 .popover-content {
-    
+
 }
  
+@media (max-width: 600px) {
+    .background {
+        border: 1px solid #eceada;
+        background-color: #eceada;
+        padding-left: 2%;
+        padding-right: 2%;
+        margin-bottom: 5%;
+    }
+    .d-grid {
+        margin-top: 1%;
+        margin-bottom: 1%;
+      }
+      .accordion-container {
+        background-image: url("./plant.jpeg");
+        padding: 2;
+        border-radius: 50px;
+      }
+
+      .accordion {
+        margin-left: 0;
+        margin-right: 0%;
+        border: 20px double #eceada; 
+        border-radius: 50px;
+        padding: 1%;
+      }
+
+}
